# wasm-joey

./: FEEDBACK.md  README.md  automated_node.sh  package-lock.json
.github/ISSUE_TEMPLATE/: bug_report.md
apps/dev_temperature_monitoring_application/documentation/: README.md
apps/dev_temperature_monitoring_application/html/: index.html
apps/dev_temperature_monitoring_application/js/: script.js
apps/image_processing/rust/: solarize.rs
apps/server_side_image_solarize/rust/: Cargo.toml
apps/server_side_image_solarize/rust/src/: solarize.rs
apps/server_side_image_watermarking/: README.md
apps/server_side_image_watermarking/node/: remotely_watermark_s3_image.js
apps/server_side_image_watermarking/rust/: Cargo.toml
apps/server_side_image_watermarking/rust/src/: lib.rs
apps/server_side_solarisation/: Cargo.toml
apps/server_side_solarisation/src/: lib.rs
apps/temperature_monitoring_application/: README.md
apps/temperature_monitoring_application/css/: style.css
apps/temperature_monitoring_application/html/: index.html
apps/temperature_monitoring_application/js/: script.js
apps/temperature_monitoring_application/rust/average/: Cargo.toml
apps/temperature_monitoring_application/rust/average/src/: lib.rs
apps/temperature_monitoring_application/rust/c_to_f/: Cargo.toml
apps/temperature_monitoring_application/rust/c_to_f/src/: lib.rs
documentation/: api_documentation_overview.md  diagnosis_of_common_issues.md  installation.md  joey_documentation_as_at_2020_11_30.json  joey_documentation_as_at_2020_11_30_with_gas_and_invocation.json  usage.md  wasm-joey API documentation.postman_collection.json
src/: .env  package.json  server.js
tests/: README.md  asdf.js  average_bg.wasm  c_to_f_bg.wasm  cumulative_storage_bg.wasm  double_number_bg.wasm  hello_bg.wasm  multipart_bg.wasm  single_test.js  tests.js
