[package]
name = "image_processing"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"

[lib]
name = "image_processing"
path = "src/solarize.rs"
crate-type =["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "=0.2.61"