[package]
name = "c_to_f"
version = "0.1.0"
authors = ["ubuntu"]
edition = "2018"
[lib]
name = "c_to_f"
path = "src/lib.rs"
crate-type =["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "=0.2.61"
serde_json = "1.0.53"
serde = { version = "1.0", features = ["derive"] }
